--- a/src/components/AudioPlayer/styles.css
+++ b/src/components/AudioPlayer/styles.css
@@ -7,12 +7,6 @@
   box-sizing: border-box;
 }
 
-html {
-  font-family: Arial, Helvetica, sans-serif;
-  height: 100%;
-  background: var(--active-color);
-  transition: background 0.4s ease;
-}
 
 button {
   background: none;
@@ -32,14 +26,22 @@ input[type="range"] {
 }
 
 .audio-player {
-  max-width: 350px;
-  padding: 24px;
+  max-width: 450px;
+  padding: 0px 10px 20px 10px;
   border-radius: 20px;
   box-shadow: 0 28px 28px rgba(0, 0, 0, 0.2);
-  margin: auto;
+  margin: 10px auto;
   color: var(--white);
 }
+.close {
+  margin-top: 15px;
+  cursor: pointer;
 
+}
+.close:hover{
+  color: #8cd9ab;
+  transition: all 0.5s ease;
+}
 .artwork {
   border-radius: 120px;
   display: block;
